# Buffotte

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONFIG_GUIDE.md  Dockerfile.backend  Dockerfile.frontend  EMAIL_BATCH_SENDING.md  README.md  SEARCH_FEATURE_README.md  WEBSITE_README.md  analysis_postprocess.py  api-keys.example.txt  api.py  baseline_test.py  buffotte.sql  clear_env_vars.ps1  config.example.json  config.json  create_schtask_23_56.ps1  create_windows_tasks.ps1  daily_automation.sh  db_setup.py  deploy.bat  deploy.sh  docker-compose.yml  ecosystem.config.js  email_config.example.json  email_config.json  evaluate_lstm_model.py  hourly_automation.sh  kline_crawler.py  llm_config.example.json  llm_config.json  lstm_config.json  nginx.conf  predict.sh  predict_future_lstm.py  proxy_example.txt  pyproject.toml  (+20 more)
.claude/: settings.local.json
api/: README.md  api-keys.txt  collector.py  export_steamdt_to_csv.py  requirements.txt  steamdt_client.py  test_cache.py
app/: dependencies.py
archive/: removed_email_config.json  removed_fetch_only.py  removed_predict_next_week.py  removed_send_report.py
backend/: manage.py  package-lock.json  package.json  server.js
cookies/: cookies.py
crawler/: batch_crawler.py  buff_to_mysql_async.py  buffcrawl.py  core.py  daily_crawler.py  database.py  item_price.py  main.py  migrate_item_details.py  requirements.txt  single_item_updater.py
db/: create_dataset.py  cs2_items_processor.py  import_historical_data.py  item_kline_processor.py  kline_data_processor.py  market_analysis_processor.py  news_processor.py  (+6 more)
(+212 files in other folders)
